--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
-    "axios": "^0.18.0",
+    "axios": "^0.21.1",
+    "nvm": "0.0.4",
     "parse": "3.1.0",
-    "react": "17.0.1",
+    "react": "^17.0.1",
     "react-bootstrap": "1.5.2",
     "react-dom": "17.0.1",
     "react-router-dom": "5.2.0",
